cree todos los archivos

--- a/principal.html
+++ b/principal.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Un poco de F1</title>
   <link rel="stylesheet" href="estilo.css">
   <script defer src="script.js"></script>
@@ -20,7 +22,7 @@
 
     <section id="carrousel" class="carrousel">
       <button id="prev">⬅️</button>
-      <img id="imagen" src="imagenes/ferrari/ferrari1.avif" width=700 height=500 alt="F1">
+      <img id="imagen" src="imagenes/ferrari/ferrari1.avif" width=700 height=500 alt="imagen F1">
       <button id="next">➡️</button>
     </section>
   </main>
