hice el articulo y el estilo y cambie un par de imagenes

--- a/principal.html
+++ b/principal.html
@@ -22,7 +22,7 @@
 
     <section id="carrousel" class="carrousel">
       <button id="prev">⬅️</button>
-      <img id="imagen" src="imagenes/ferrari/ferrari1.avif" width=700 height=500 alt="imagen F1">
+      <img id="imagen" src="imagenes/presentacion.jpeg" width=700 height=500 alt="imagen F1">
       <button id="next">➡️</button>
     </section>
   </main>
