--- a/principal.html
+++ b/principal.html
@@ -12,7 +12,7 @@
     <nav class="menu">
       <a href="principal.html">Inicio</a>
       <a href="articulo.html">Informacion de Equipos</a>
-      <a href="formulario.html">formulario</a>
+      <a href="formulario.html">Formulario</a>
     </nav>
   </header>
 
