--- a/formulario.html
+++ b/formulario.html
@@ -35,7 +35,7 @@
   </main>
 
   <footer>
-    <p>Hecho por Tomas Abatedaga</p>
+    <p>© Derechos reservados a F1</p>
   </footer>
 </body>
 </html>
