index fixed for gh pages

--- a/index.html
+++ b/index.html
@@ -1,34 +1,44 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Un poco de F1</title>
-  <link rel="stylesheet" href="estilo.css">
-  <script defer src="script.js"></script>
-</head>
-<body>
-  <header>
-    <nav class="menu">
-      <a href="principal.html">Inicio</a>
-      <a href="articulo.html">Informacion de Equipos</a>
-      <a href="formulario.html">Formulario</a>
-    </nav>
-  </header>
+	<head>
+		<meta charset="UTF-8" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0" />
+		<title>Un poco de F1</title>
+		<link rel="stylesheet" href="estilo.css" />
+		<script defer src="script.js"></script>
+	</head>
+	<body>
+		<header>
+			<nav class="menu">
+				<a href="index.html">Inicio</a>
+				<a href="articulo.html">Informacion de Equipos</a>
+				<a href="formulario.html">Formulario</a>
+			</nav>
+		</header>
 
-  <main>
-    <h1>Bienvenido a la pasion por la F1</h1>
-    <p>Una pagina para aprender y disfrutar un poco mas del automovilismo</p>
+		<main>
+			<h1>Bienvenido a la pasion por la F1</h1>
+			<p
+				>Una pagina para aprender y disfrutar un poco mas del
+				automovilismo</p
+			>
 
-    <section id="carrousel" class="carrousel">
-      <button id="prev">⬅️</button>
-      <img id="imagen" src="imagenes/presentacion.jpeg" width=700 height=500 alt="imagen F1">
-      <button id="next">➡️</button>
-    </section>
-  </main>
+			<section id="carrousel" class="carrousel">
+				<button id="prev">⬅️</button>
+				<img
+					id="imagen"
+					src="imagenes/presentacion.jpeg"
+					width="700"
+					height="500"
+					alt="imagen F1" />
+				<button id="next">➡️</button>
+			</section>
+		</main>
 
-  <footer>
-    <p>© Derechos reservados a F1</p>
-  </footer>
-</body>
+		<footer>
+			<p>© Derechos reservados a F1</p>
+		</footer>
+	</body>
 </html>
