--- a/formulario.html
+++ b/formulario.html
@@ -1,41 +1,43 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contacto </title>
-  <link rel="stylesheet" href="estilo.css">
-  <script defer src="script.js"></script>
-</head>
-<body>
-  <header>
-    <nav class="menu">
-      <a href="principal.html">Inicio</a>
-      <a href="articulo.html">Informacion de Equipos</a>
-      <a href="formulario.html">Formulario</a>
-    </nav>
-  </header>
+	<head>
+		<meta charset="UTF-8" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0" />
+		<title>Contacto </title>
+		<link rel="stylesheet" href="estilo.css" />
+		<script defer src="script.js"></script>
+	</head>
+	<body>
+		<header>
+			<nav class="menu">
+				<a href="index.html">Inicio</a>
+				<a href="articulo.html">Informacion de Equipos</a>
+				<a href="formulario.html">Formulario</a>
+			</nav>
+		</header>
 
-  <main>
-    <h1>Contacto</h1>
-    <form id="form-contacto">
-      <label>Nombre:</label>
-      <input type="text" id="nombre" required>
+		<main>
+			<h1>Contacto</h1>
+			<form id="form-contacto">
+				<label>Nombre:</label>
+				<input type="text" id="nombre" required />
 
-      <label>Email:</label>
-      <input type="email" id="email" required>
+				<label>Email:</label>
+				<input type="email" id="email" required />
 
-      <label>Teléfono:</label>
-      <input type="text" id="telefono" required>
+				<label>Teléfono:</label>
+				<input type="text" id="telefono" required />
 
-      <button type="submit">Enviar</button>
-    </form>
+				<button type="submit">Enviar</button>
+			</form>
 
-    <div id="resultado"></div>
-  </main>
+			<div id="resultado"></div>
+		</main>
 
-  <footer>
-    <p>© Derechos reservados a F1</p>
-  </footer>
-</body>
+		<footer>
+			<p>© Derechos reservados a F1</p>
+		</footer>
+	</body>
 </html>
