--- a/formulario.html
+++ b/formulario.html
@@ -22,13 +22,13 @@
 			<h1>Contacto</h1>
 			<form id="form-contacto">
 				<label>Nombre:</label>
-				<input type="text" id="nombre" required />
+				<input type="text" id="nombre"/>
 
 				<label>Email:</label>
-				<input type="email" id="email" required />
+				<input type="text" id="email"/>
 
 				<label>Teléfono:</label>
-				<input type="text" id="telefono" required />
+				<input type="text" id="telefono"/>
 
 				<button type="submit">Enviar</button>
 			</form>
